Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28571

Wrong tooltip when split mode is used

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 10.0.0
    • Qt Creator 9.0.0
    • Editors
    • None
    • 81075b813 (master)

    Description

      Sometimes it's possible to have the wrong tooltip when split mode is used.

      Steps:

      1. Split editor
      2. Hover mouse over some symbol in the left editor
      3. Hover mouse over some symbol in the right editor
      4. Hover mouse the same symbol in the left editor as in step #2

      Actual result:

      A tooltip will appear with text from the right editor.

      Expected result:

      A tooltip will appear with text from the left editor.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            tyler92 Mike H
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes